--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pumpfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "localhost",
+  "homepage": "",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -18,7 +18,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "set PORT=3366 && react-scripts start",
+    "start": "set PORT=80 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
